--- a/assets/ie.css
+++ b/assets/ie.css
@@ -652,9 +652,6 @@ body.overlay-open .fixed-area {
   margin: 100px auto 0;
   max-width: 1000px;
 }
-.overlay-wrapper.about-overlay {
-  max-width: 375px;
-}
 .overlay-wrapper img {
   width: 100%;
   margin: 0;
